Fixed Nav Icons Jumping

--- a/app/scss/structure/_app-main.scss
+++ b/app/scss/structure/_app-main.scss
@@ -408,6 +408,7 @@ div.mobile-app-nav-arrows {
 	}
 	.icon-nav-wrap {
 		display: inline-block;
+        float: left;
 		a {
 			/*cursor: pointer;*/
 		}
@@ -418,8 +419,8 @@ div.mobile-app-nav-arrows {
         }
     }
 	.icon-img {
-		max-width: 41px;
-		max-height: 42px;
+		max-width: 37px;
+		max-height: 38px;
         cursor: auto;
 		// &.current {
 		// 	display: none;
@@ -427,8 +428,8 @@ div.mobile-app-nav-arrows {
 	}
 	.icon-img-current {
 		// display: none;
-		max-width: 41px;
-		max-height: 42px;
+		max-width: 37px;
+		max-height: 38px;
         cursor: pointer;
 		// &.current {
 		// 	display: inline-block;
